--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,11 @@
-body {
-  background-color: cadetblue;
+#main {
+  margin: 20px;
+}
+
+td {
+  margin: 20px;
+}
+
+li {
+  list-style-type: none;
 }
