Update styles - in progress

--- a/public/main.css
+++ b/public/main.css
@@ -1,5 +1,7 @@
 #main {
   margin: 20px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 20px;
 }
 
 td {
@@ -8,4 +10,72 @@ td {
 
 li {
   list-style-type: none;
+}
+
+#title {
+  font-family: 'Pacifico', cursive;
+  text-align: center;
+  font-size: 60px;
+}
+
+#challenge {
+  border: 1px solid grey;
+}
+
+#instruction {
+  border: 1px solid grey;
+}
+
+#learn {
+  border: 1px solid grey;
+}
+
+#challenge, #instruction, #learn {
+  margin: 10px 0;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+#body {
+  background-color: #D1F0E8;
+}
+
+
+.right {
+  text-align: right;
+}
+
+.mainImage {
+  display: block;
+  margin: 10px auto;
+  border: 5px solid white;
+}
+
+.rightHalf {
+  background-color: #96DBCF;
+  border-radius: 5px;
+}
+
+.rightHalf, .leftHalf {
+  padding: 0 10px;
+}
+
+.content {
+  padding: 5px 10px;
+}
+
+.header {
+  background-color: #84C7B8;
+  text-align: center;
+  font-weight: 800;
+  border-radius: 5px;
+}
+
+.nav, .navItem {
+  background-color: #84C7B8;
+  color: black !important;
+}
+
+.navItem:hover {
+  color: white !important;
 }
